# novelist

./: .env.example  .gitignore  README.md  SUBMISSION_CHECKLIST.md
novelist/: .env  .env.example  README.md  pyproject.toml  test_output.txt
novelist/.agents/tasks/: prd.md
novelist/.ralph/: IMPLEMENTATION_PLAN.md  progress.md
novelist/.tmp/: modelcontextprotocol-server-puppeteer-2025.5.12.tgz
novelist/sessions/: graveyard.json
novelist/sessions/147046e9/: concept_map.json  hypotheses.json  summary.json  traces.json
novelist/sessions/2b003a88/: concept_map.json  hypotheses.json  summary.json  traces.json
novelist/sessions/2d7bc7e3/: concept_map.json  hypotheses.json  summary.json  traces.json
novelist/sessions/350faedf/: concept_map.json  hypotheses.json  summary.json  traces.json
novelist/sessions/5b44937f/: concept_map.json  hypotheses.json  summary.json  traces.json
novelist/sessions/6180885e/: concept_map.json  hypotheses.json  summary.json  traces.json
novelist/sessions/6793a99a/: concept_map.json  hypotheses.json  summary.json  traces.json
novelist/sessions/788512d3/: concept_map.json  hypotheses.json  summary.json  traces.json
novelist/sessions/81cdb82d/: summary.json  (+3 more)
novelist/src/: server.py
novelist/tests/: debug_orchestrator_hang.py  test_api_contract_final.py  test_arxiv_caching.py  test_arxiv_simple.py  test_knowledge_integration.py  test_llm_simple.py  test_orchestrator_mock.py  test_pipeline.py  test_pipeline_fix.py  test_simulator_real.py  test_tree_search.py
novelist/ui/: package-lock.json  package.json  tailwind.config.js.bak
(+187 files in other folders)
